# python-template

./: .gitignore  .pre-commit-config.yaml  app.py  archives.html  authors.html  categories.html  index.html  main.py  my-first-post.html  pelicanconf.py  publishconf.py  pyproject.toml  tags.html
.github/workflows/: ci.yml
author/: isabel.html
category/: blog.html
feeds/: all-en.atom.xml  all.atom.xml  blog.atom.xml  isabel.atom.xml  isabel.rss.xml
mysite/content/: my-web.md
src/: pydantic_.py  utils.py
tag/: pelican.html  static-site.html
tests/: test_utils.py
