[project]
name = "python-template"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
packages = [
    {include = "python_template", from = "src"}
]
readme = "README.md"
requires-python = ">=3.12, <3.13"
dependencies = [
    "pytest (>=8.4.1,<9.0.0)",
    "pandas (>=2.3.1,<3.0.0)",
    "numpy (>=2.3.1,<3.0.0)",
    "pre-commit (>=4.2.0,<5.0.0)",
    "black (>=25.1.0,<26.0.0)",
    "deptry (>=0.23.0,<0.24.0)",
    "isort (>=6.0.1,<7.0.0)",
    "openai (>=1.97.0,<2.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "pytest-cov (>=6.2.1,<7.0.0)",
    "mypy (>=1.17.0,<2.0.0)",
    "pelican (>=4.11.0,<5.0.0)",
    "markdown (>=3.8.2,<4.0.0)",
    "streamlit (>=1.47.0,<2.0.0)",
    "plotly (>=6.2.0,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
markers = [
  "isabel: mark tests as belonging to Isabel"
]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
disallow_untyped_defs = true
check_untyped_defs = true
strict_optional = true
warn_unused_ignores = true
